Update and rename file.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <html>
 
 <head>
-
-    <script src="program1.js"></script>
-    <link rel="stylesheet" href="file.css">
-
-
+    <script src="script.js"></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -14,10 +11,7 @@
         <button id="btn1" onclick="substract()">-</button>
         <button id="btn2" onclick="add()">+ </button><br>
     </div>
-    <button id="btn3" onclick="reset()">Reset</button>
-    
-
-    
+    <button id="btn3" onclick="reset()">Reset</button>  
 </body>
 
 </html>
